fix: popup, alignment issues for large match counts

--- a/src/popup/base.css
+++ b/src/popup/base.css
@@ -17,7 +17,7 @@
 }
 
 html {
-  width: 350px;  
+  width: 400px;  
   height: auto; 
 }
 
