--- a/src/popup/components/MainPage/QueryRow/MatchCounter/MatchCounter.css
+++ b/src/popup/components/MainPage/QueryRow/MatchCounter/MatchCounter.css
@@ -1,4 +1,8 @@
 .match-counter {
   margin-left: auto;
   pointer-events: none;
+  max-width: 80px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
