--- a/src/popup/components/MainPage/QueryRow/SearchBar/SearchBar.css
+++ b/src/popup/components/MainPage/QueryRow/SearchBar/SearchBar.css
@@ -3,6 +3,9 @@
   border-radius: 8px;
   transition: background-color 0.2s ease;
   flex-grow: 1;
+  flex-shrink: 1;
+  min-width: 0;
+  display: flex;
   margin-right: 7px;
   pointer-events: none;
 }
@@ -13,19 +16,18 @@
   align-items: center;
   padding: 0 5px;
   width: 100%;
+  min-width: 20px;
   pointer-events: auto;
   user-select: auto;
 }
 
 .light-theme .search-bar {
   background-color: var(--light-bg);
-  border: 1px solid var(--light-border);
   color: var(--light-text);
 }
 
 .dark-theme .search-bar {
   background-color: var(--dark-elevate);
-  border: 1px solid var(--dark-border);
 }
 
 .dark-theme .search-bar > input {
